objects/BU_Specific_Information__c.object
<CustomObject>
    <fields>
        <fullName>Turbine__c</fullName>
        <label>Turbine</label>
        <picklist>
            <picklistValues>
                <fullName>Turbine (800 Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbine (HR series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbine (SD series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Turbine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HVDC Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement_Elec__c</fullName>
        <label>Unit Of Measurement Elec.</label>
        <picklist>
            <picklistValues>
                <fullName>M3/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWpeak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t/h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t/y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL (Unknown)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <label>Unit Of Measurement</label>
        <picklist>
            <picklistValues>
                <fullName>M3/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWpeak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t/d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t/h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t/y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL (Unknown)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voltage_Levels__c</fullName>
        <description>Allows users to enter any combination of letters and numbers</description>
        <inlineHelpText>Please insert voltages in the format 420/220/110 with “/” as separator</inlineHelpText>
        <label>Voltage Levels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIS__c</fullName>
        <label>WIS</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_of_expected_Installation__c</fullName>
        <description>Allows users to enter any number. Leading zeros are removed.</description>
        <label>Year of (expected) Installation</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_BU_Specific_Information__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of BU Specific Information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BU Specific Information</label>
    <nameField>
        <displayFormat>BSI-{0}</displayFormat>
        <label>BU Specific Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BU Specific Information</pluralLabel>
    <recordTypes>
        <fullName>IAPG_Specific</fullName>
        <active>true</active>
        <description>All Opportunity Information for IAEN</description>
        <label>IAEN Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAPI_Specific</fullName>
        <active>true</active>
        <description>All Opportunity Information for IAPI</description>
        <label>IAPI Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>MODR_Specific</fullName>
        <active>true</active>
        <description>All Opportunity Information for MODR</description>
        <label>MODR Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>MOMG_Specific</fullName>
        <active>true</active>
        <description>All Opportunity Information for MOMG</description>
        <label>MOMG Specific</label>
    </recordTypes>
    <recordTypes>
        <fullName>PGGI_Specific</fullName>
        <active>true</active>
        <description>All Opportunity Information for PGGI</description>
        <label>PGGI Specific</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Opportunity_With_Bulk_Account</fullName>
        <active>true</active>
        <description>Related Opportunity cannot have Bulk Business Account Customer.</description>
        <errorConditionFormula>AND(CONTAINS(LOWER(Opportunity__r.Account.Name), &apos;bulk business&apos;), NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c)
)</errorConditionFormula>
        <errorMessage>Related Opportunity cannot have Bulk Business Account Customer.</errorMessage>
    </validationRules>
</CustomObject>